RESOLVED FIXED152906
Hovering link on http://help.apple.com/appletv/#/ does not show text underline.
https://bugs.webkit.org/show_bug.cgi?id=152906
Summary Hovering link on http://help.apple.com/appletv/#/ does not show text underline.
alan
Reported 2016-01-08 11:15:42 PST
1. Open http://help.apple.com/appletv/#/ 2. Resize browser to be wide (bug does not reproduce when narrow) 3. Hover the trademark link => no underline on 2nd line of text
Attachments
Patch (11.94 KB, patch)
2016-01-08 11:25 PST, alan
simon.fraser: review+
alan
Comment 1 2016-01-08 11:15:59 PST
alan
Comment 2 2016-01-08 11:25:48 PST
Simon Fraser (smfr)
Comment 3 2016-01-08 11:40:53 PST
Comment on attachment 268558 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=268558&action=review > Source/WebCore/ChangeLog:10 > + This additional visual overflow offset is not taken into account at visualOverflowForDecorations(). s/at/by/
alan
Comment 4 2016-01-08 12:05:23 PST
Joseph Pecoraro
Comment 5 2016-01-08 13:16:03 PST
Comment on attachment 268558 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=268558&action=review > LayoutTests/fast/css3-text/css3-text-decoration/text-underline-position/underline-visual-overflow-with-subpixel-position.html:35 > + shouldNotBe("window.internals.repaintRectsAsText().indexOf('8 8 784 13')", "-1"); > + shouldNotBe("window.internals.repaintRectsAsText().indexOf('8 20 784 13')", "-1"); String.prototype.includes is a tad nicer than String.prototype.indexOf !== -1. These could be: shouldBeTrue(window.internals.repaintRectsAsText().includes('8 8 784 13'));
Note You need to log in before you can comment on or make changes to this bug.